--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
+  "dependencies": {    "composer": "^4.1.0",
+    "eslint-plugin-json": "^2.1.1",
+    "fs": "0.0.1-security",
+    "source": "0.0.3",
+    "telegraf": "^3.37.0",
+    "telegraf-keyboard": "^1.1.2",
+    "telegraf-session-dynamodb": "^1.3.0",
+    "telegraf-session-local": "^1.0.2",
     "express": "^4.13.3",
     "node-telegram-bot-api": "^0.15.0"
   },
